# gr-grpc

./: .gitignore  CMakeLists.txt  MANIFEST.md
cmake/Modules/: grpc_blocksConfig.cmake
docs/: README.grpc_blocks
docs/doxygen/: Doxyfile.in  swig_doc.pyo
docs/doxygen/doxyxml/: base.pyo  text.pyo
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  grpc_blocks_client_sink.xml  grpc_blocks_client_source.xml  grpc_blocks_sink.xml  grpc_blocks_source.xml
include/grpc_blocks/: CMakeLists.txt  api.h  grpc_client_sink.h  grpc_client_source.h  grpc_server_sink.h  sink.h  source.h
lib/: CMakeLists.txt  data_streamer.client.cc  data_streamer.grpc.pb.cc  data_streamer.grpc.pb.h  data_streamer.pb.cc  data_streamer.pb.h  data_streamer.server.cc  data_streamer.server.h  genproto.sh  grgrpc.grpc.pb.cc  grgrpc.grpc.pb.h  grgrpc.pb.cc  grgrpc.pb.h  grgrpc.proto  grpc_client_sink_impl.cc  grpc_client_sink_impl.h  grpc_client_source_impl.cc  grpc_client_source_impl.h  grpc_server_sink_impl.cc  grpc_server_sink_impl.h  qa_grpc_blocks.cc  qa_grpc_blocks.h  radio.grpc.pb.cc  radio.grpc.pb.h  radio.pb.cc  radio.pb.h  radio.proto  radio.server.cc  radio.server.h  sink_impl.cc  sink_impl.h  source_impl.cc  source_impl.h  test_grpc_blocks.cc  work_block.cc  work_block.h
lib/protos/: grgrpc.proto
python/: CMakeLists.txt  __init__.py  __init__.pyo  build_utils.pyo  build_utils_codes.pyo  code_proxy.py  grgrpc_pb2.py  grgrpc_pb2_grpc.py  qa_client_sink.py  qa_client_source.py  qa_sink.py  simple_proxy.py  simplerequestor.py  test.py
python/.unittests/python/: qa_sink.xml
swig/: CMakeLists.txt  grpc_blocks_swig.i
